reference-llvm/tests/should-fail/fail27.mu
// not @handler

function bar() {
    ;
}

function @entry foo() {
    scope (always) bar;
}
